--- a/provision_hadoop_vm/Vagrantfile
+++ b/provision_hadoop_vm/Vagrantfile
@@ -1,7 +1,7 @@
 VAGRANTFILE_API_VERSION = "2"
 Vagrant.configure(VAGRANTFILE_API_VERSION) do |config|
-config.vm.box = "ubu-hadoop"
-config.vm.box_url = "http://files.vagrantup.com/lucid64.box"
+config.vm.box = "trusty64"
+config.vm.box_url = "https://cloud-images.ubuntu.com/vagrant/trusty/current/trusty-server-cloudimg-amd64-vagrant-disk1.box"
 config.vm.synced_folder "./", "/vagrant", id: "vagrant-root"
 config.vm.provider :virtualbox do |vb|
      vb.customize ["modifyvm", :id, "--natdnshostresolver1", "on"]
